# inkwell

./: .editorconfig  .env.example  .gitignore  .prettierignore  .vercelignore  ARTICLE.md  CHANGELOG.md  LICENSE  Makefile  PROJECT_BRIEF.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/src/inkwell_backend/: __init__.py  __main__.py  logging_setup.py  main.py  settings.py
backend/src/inkwell_backend/api/: __init__.py  cors.py  deps.py  middleware.py  responses.py
backend/src/inkwell_backend/api/v1/: __init__.py  complete.py  health.py  meta.py  ocr.py  router.py
backend/src/inkwell_backend/config/: __init__.py  models.catalog.json  models.catalog.schema.json
backend/src/inkwell_backend/domain/: __init__.py  actions.py  errors.py  languages.py  limits.py  models.py  prompts.py  schemas.py  sse.py  tones.py
backend/src/inkwell_backend/providers/: __init__.py  base.py  mock_provider.py  openai_client.py  openai_provider.py  portkey.py  registry.py
backend/src/inkwell_backend/services/: __init__.py  audit.py  completion.py  ocr.py  ocr_cache.py  prompt.py  rate_limit.py  sanitizer.py
backend/tests/: conftest.py  test_audit.py  test_complete.py  test_health.py  test_meta.py  test_models_catalog.py  test_ocr.py  test_portkey.py  test_prompt.py  test_rate_limit.py  test_sanitizer.py
docs/: ARTICLE.md  PROJECT_BRIEF.md  README.md  contributing.md  getting-started.md  privacy.md  security.md
docs/explanation/: model-providers.md  multilingual-support.md  prompt-injection-defense.md  streaming-design.md  three-rewrite-modes.md
docs/how-to/: add-a-site-adapter.md  deploy-to-vercel.md  local-development.md  rotate-secrets.md  use-your-own-backend.md
docs/reference/: api.md  architecture.md  environment.md  error-codes.md
frontend/: .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
